chore: Remove JSII compliance requirement

--- a/.gitattributes
+++ b/.gitattributes
@@ -18,9 +18,10 @@
 /.projen/deps.json linguist-generated
 /.projen/files.json linguist-generated
 /.projen/tasks.json linguist-generated
-/API.md linguist-generated
 /codecov.yml linguist-generated
 /package.json linguist-generated
 /renovate.json5 linguist-generated
 /tsconfig.dev.json linguist-generated
+/tsconfig.json linguist-generated
+/typedoc.json linguist-generated
 /yarn.lock linguist-generated
