--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "test:watch": "npx projen test:watch",
     "typedocDocgen": "npx projen typedocDocgen",
     "unbump": "npx projen unbump",
+    "update-projen": "npx projen update-projen",
     "upgrade": "npx projen upgrade",
     "watch": "npx projen watch",
     "projen": "npx projen"
@@ -34,8 +35,8 @@
     "@time-loop/clickup-projen": "^0.0.178",
     "@types/jest": "^27",
     "@types/node": "^14",
-    "@typescript-eslint/eslint-plugin": "^5",
-    "@typescript-eslint/parser": "^5",
+    "@typescript-eslint/eslint-plugin": "^6",
+    "@typescript-eslint/parser": "^6",
     "ajv": "8.12.0",
     "aws-cdk-lib": "2.95.1",
     "constructs": "10.2.70",
