--- a/renovate.json5
+++ b/renovate.json5
@@ -19,6 +19,9 @@
       "matchPackagePatterns": [
         "*"
       ],
+      "excludePackagePatterns": [
+        "^@time-loop\\/clickup-projen"
+      ],
       "matchUpdateTypes": [
         "minor",
         "patch"
@@ -32,21 +35,26 @@
       "addLabels": [
         "optional"
       ]
+    },
+    {
+      "matchPackagePatterns": [
+        "^@time-loop\\/clickup-projen"
+      ],
+      "allowedVersions": "!/^[0-9]+\\.[0-9]+\\.[0-9]+(\\.[0-9]+)?-(alpha|beta).*$/"
     }
   ],
   "ignoreDeps": [
-    "@types/jest",
     "@types/node",
     "@typescript-eslint/eslint-plugin",
     "@typescript-eslint/parser",
     "eslint",
     "jest-junit",
-    "jest",
     "npm-check-updates",
     "standard-version",
-    "ts-jest",
     "ts-node",
-    "node"
+    "node",
+    "@time-loop/clickup-projen",
+    "projen"
   ],
   "rangeStrategy": "bump",
   "prHourlyLimit": 0,
